--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
     transition: 0.5s;
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
+    outline: none;
 }
 
 #section #inputConfirm input:hover{
@@ -55,6 +56,7 @@ body{
     width: 80%;
     margin: 0 auto;
     padding-top: 25px;
+
 }
 #content p{
     text-align: left;
@@ -84,6 +86,7 @@ body{
     margin-top: 50px;
     height: 80px;
     color: grey;
+        display: none;
 
 }
 
