--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
 body{
-    background-image: url('img/bg.png');
+    background-image: url('bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
