--- a/Plataforma/style.css
+++ b/Plataforma/style.css
@@ -125,4 +125,62 @@ body{
 .menu{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-y: auto;
+}
+
+.menu::-webkit-scrollbar{
+    background-color: rgb(179, 179, 179);
+    width: 4px;
+}
+.menu::-webkit-scrollbar-thumb{
+    background-color: rgb(119, 119, 119)
+}
+
+@media screen and (max-width:765px){
+
+
+.menu{
+    width: 70px;
+    height: 100%;
+    background-color: rgb(61, 61, 61);
+    text-align: center;
+}
+
+
+.material-icons{
+    color: rgb(150, 150, 150);
+    background-color: rgb(231, 231, 231);
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+
+    margin-top: 50px;
+    margin-left: 0px;
+}
+
+.content{
+    width: calc(100% - 70px);
+    height: min-content;
+
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%)
+}
+.verify-video {
+    margin: 0 auto;
+}
+.verify-video input[type='checkbox']{
+    display: block;
+    width: 60%;
+}
+.verify-video input{
+    margin-top: 50px;
+    
+}
+.verify-video input:nth-of-type(3){
+    margin-top: 20px;
+    
+}
+
 }
